# Competition_arm_planning

./: .gitignore  README.md  start_all.sh
src/Config/: home.yaml  plan_home_to_target.yaml  plan_target_to_home.yaml  target.yaml
src/bt_test_nodes/: package.xml  setup.cfg  setup.py
src/bt_test_nodes/bt_test_nodes/: circles_service.py  qrcode_publisher.py  start_publisher.py  success_publisher.py
src/main_bt/: CMakeLists.txt  package.xml
src/main_bt/include/main_bt/: bt_nodes.hpp  communication.hpp  grasp.h  trajectory_interpolator.hpp
src/main_bt/launch/: main.launch.py  test_trajectory.launch.py
src/main_bt/src/: bt_nodes_comm.cpp  bt_nodes_main.cpp  bt_nodes_motion.cpp  bt_runner.cpp  communication.cpp  grasp.cpp  test.cpp  trajectory_interpolator.cpp
src/main_bt/trees/: main.xml
src/main_bt/trees/subtrees/: place.xml  place_and_pick.xml  turntable.xml
src/robot_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_config/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot_description.ros2_control.xacro  robot_description.srdf  robot_description.urdf.xacro  ros2_controllers.yaml
src/robot_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/meshes/: link2.STL  link5.STL  link6.STL  link_hand.STL  link_left.STL  link_right.STL
src/robot_description/urdf/: robot_description.csv  robot_description.urdf
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/srv/: GetCircles.srv  SendCommand.srv
src/robot_serial/: CMakeLists.txt  package.xml
src/robot_serial/include/robot_serial/: fin_serial.hpp
src/robot_serial/src/: fin_serial.cpp  serial_service_node.cpp
src/vision_node/: package.xml  setup.py
src/vision_node/msg/: circle_group.msg
src/vision_node/vision_node/: circle_client.py  circle_publisher.py  circle_server.py  qr_client.py  qr_publisher.py  qr_server.py
